<resources>
    <string name="days_left">days left</string>
    <string name="day_left">day left</string>
    <string name="date_expired">Demo expired</string>
    <string name="welcome_demo"><b>Welcome to <i>TUM Campus App Demo</i></b>.\n\nIn order to use this demo, an internet connection has to be established. This demo is valid until the 08.09.2013.</string>
    <string name="no_map_available">No map available</string>
    <string name="android_version_too_low">Android version too low</string>
    <string name="android_version_too_low_message">This feature is not available on your current Android version</string>
    <string name="dialog_show_calendar">Export successful.\nShow local calendar <i>TUM_CAMPUS_APP</i> on <i>Google Calendar App</i>?</string>
    <string name="average_grade">Average grade</string>
    <string name="delete_chache_sure">Are you sure to delete all data?</string>
    <string name="export_to_google">Export to Google</string>
    <string name="loading_longtime"><i>(This operation will take a bit longer)</i></string>
    <string name="button_skip">Skip</string>
    <string name="background_info">Content will be fetchted once per day to keep your TUM Campus App up to date.</string>
    <string name="background_mode">Background Mode -NOT AVAILABLE-</string>
    <string name="set_background_mode"><b>Background Mode</b>\n\nActivate or deactivate <i>Background Mode</i>. If activated, content will be fetchted once per day to keep your TUM Campus App up to date.</string>
    <string name="set_silent_mode"><b>Silent Service</b>\n\nActivate or deactivate <i>Silent Service</i>. If activated, the device will go into silent mode if a lecture appointment has been recognized.</string>
    <string name="goto_tumcampus">Go to TUM Campus App</string>
    <string name="success_clear_cache">Successfully cleared cache</string>
    <string name="clear_cache_detail">Deletes all data which was downloaded by the TUM Campus App and stored on the SD-Card</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="enable_token_link"><html><a href="http://campus.tum.de">Enable Token through TUM campus portal using Token-Management</a></html></string>
    <string name="add_rss">Add RSS-Feed</string>
    <string name="schedule">Calendar</string>
    <string name="schedule_extras">Your schedule</string>
    <string name="lecture_schedule">Lecture Schedule</string>
    <string name="lecture_schedule_extra">Your lectures schedule</string>
    <string name="bib">Library</string>
    <string name="extra">Extra</string>
    <string name="extra_name">Extra Name</string>
    <string name="identifier">Identifier</string>
    <string name="today">Today</string>
    <string name="open_wizzard">Open Startup-Wizzard</string>
    <string name="open_wizzard_detail">The Startup-Wizzard helps you in order to set the basic preferences for accessing TUMOnline services and the layout of this App.</string>
    <string name="extras">Extras</string>
    <string name="no_departures_found">No departures available</string>
    <string name="no_station_found">No station found</string>
    <string name="no_rooms_found">No rooms found</string>
    <string name="exception_unknown">Unknown error</string>
    <string name="exception_sdcard">Error accessing the SD-Card</string>
    <string name="exception_timeout">Problems with internet connection, please try later</string>
    <string name="action_prices">Prices</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="cafeteria_ingredients">(f) fleischloses Gericht
        \n(v) veganes Gericht
		\n(S) Gericht mit Schweinefleisch
		\n(R) Gericht mit Rindfleisch
		\n(GQB) Geprüfte Qualität - Bayern
		\n(99) Gericht mit Alkohol
		\n\n1 mit Farbstoff
		\n2 mit Konservierungsstoff
		\n3 mit Antioxidationsmittel
		\n4 mit Geschmacksverstärker
		\n5 geschwefelt
		\n6 geschwärzt (Oliven)
		\n8 mit Phosphat
		\n9 mit Süßungsmitteln
		\n10 enthält eine Phenylalaninquelle
		\n11 mit einer Zuckerart und Süßungsmitteln
		\n99 mit Alkohol</string>
    <string name="action_ingredients">Ingredients</string>
    <string name="role_summary">Your role at TUM. Either student, employee or guest.</string>
    <string name="role">Role</string>
    <string name="lectures_information">Lecture Information</string>
    <string name="lectures_appointments">Lecture Appointments</string>
    <string name="latest_events">Latest Events</string>
    <string name="archived_events">Archived Events</string>
    <string name="no_appointments">"No appointments available"</string>
    <string name="information_addinfo">Additional information and links</string>
    <string name="amount_dots">Outstanding balance:</string>
    <string name="deadline_dots">Deadline:</string>
    <string name="color_scheme">Color Scheme</string>
    <string name="color_scheme_summary">Your desired color scheme for this App.</string>
    <string name="layout_settings">Layout Settings</string>
    <string name="no_search_result">No search result</string>
    <string name="search_rooms">Search rooms</string>
    <string name="lang">eng</string>
    <string name="app_name">TUM Campus App</string>
    <string name="action_settings">Settings</string>
    <string name="generate_tumonline_token">Generate TUMOnline-Access-Token</string>
    <string name="generate_tumonline_token_detail">Generates a Token for using TUMOnline features. You
		have to accept the token and set the corresponding permissions in
		TUMOnline by yourself.</string>
    <string name="action_clear_cache">Clear cache</string>
    <string name="tum_common">General TUM</string>
    <string name="my_tum">My TUM</string>
    <string name="default_detail_info">Additional information goes here</string>
    <string name="empty_string" />
    <string name="tum_news">TCA-News</string>
    <string name="timetable">Timetable</string>
    <string name="result_extra">Result:&#160;</string>
    <string name="error_fetching_tumonline">Error accessing TUMOnline.\nPlease make sure your TUMOnline-Access-Token has
		been\nactivated and the corresponding rights are set.\n\n<b>Click here for retry.</b></string>
    <string name="error_no_token_setup">No TUMOnline-Access-Token was set.\nPlease set your TUMOnline-Access-Token in the\n <i>Settings</i> screen to access TUMOnline features.\n\n<b>Click here for the <i>Settings</i> screen.</b></string>
    <string name="error_sorry">Sorry, an error appeared.</string>
    <string name="error_something_wrong">Sorry, something went wrong.</string>
    <string name="lecture_search">Lectures Search</string>
    <string name="add_rss_feed">Add RSS-Feed</string>
    <string name="personsearch_addinfo">Search for persons at TUM</string>
    <string name="lecturessearch_addinfo">Search for lectures at TUM</string>
    <string name="plans_addinfo">Plans for TUM Campus and MVV</string>
    <string name="roomfinder_addinfo">Search for rooms at TUM</string>
    <string name="studyplans_addinfo">Studyplans for study programs</string>
    <string name="openinghours_addinfo">Times for important institutions</string>
    <string name="lectures_addinfo">List of your lectures</string>
    <string name="grades_addinfo">List of your grades</string>
    <string name="timetable_addinfo">Your timetable</string>
    <string name="tuitionfee_addinfo">Information about the tuition fees</string>
    <string name="rssfeed_addinfo">Famous RSS-Feeds</string>
    <string name="tumnews_addinfo">News about the TUM Campus App</string>
    <string name="events_addinfo">Events at TUM</string>
    <string name="gallery_addinfo">Event announcements</string>
    <string name="mvv_addinfo">Departures of MVV</string>
    <string name="cafeteria_addinfo">Dishes at all TUM cafeterias</string>
    <string name="search_persons">Search persons</string>
    <string name="tumonline_password_word">TUMOnline Password</string>
    <string name="tumonline_lrz_id">TUM Identification</string>
    <string name="tumonline_access_token_word">TUMOnline-Access-Token</string>
    <string name="modules">Modules</string>
    <string name="mensa_filter">Mensa filter</string>
    <string name="mensa_settings_info">e.g. "Garching" to list only the dining halls in
		Garching</string>
    <string name="silence_phone">Silent Service</string>
    <string name="silence_phone_info">Sets you device in sielnt mode if a lectures has been recognized.</string>
    <string name="debug_for_developer">for developers</string>
    <string name="debug_mode">debug mode</string>
    <string name="market">Google Play</string>
    <string name="market_info">Rate or update TUM Campus</string>
    <string name="app_management">App management</string>
    <string name="app_management_info">Delete data or deinstall App</string>
    <string name="choose_mensa">Please select a university canteen.</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_study_plan">Choose study plan</string>
    <string name="choose_doc">Choose document:</string>
    <string name="past_events">Past events</string>
    <string name="url">URL</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="choose_feed">Choose feed</string>
    <string name="insert_search">Search lectures</string>
    <string name="search">Search</string>
    <string name="grade_overview">List of all exams with grades:</string>
    <string name="lec_details_title">Course details</string>
    <string name="lec_dates">Lecture dates</string>
    <string name="lec_details">Details</string>
    <string name="semester_data">Semester data</string>
    <string name="sws_number">Number of semester periods per week</string>
    <string name="lecture_begin">Lecture begin</string>
    <string name="first_date">First lecture date</string>
    <string name="lec_contributors">Lecture contributors</string>
    <string name="lecturer">Lecturer</string>
    <string name="organisation_of_lecture">Organization</string>
    <string name="lec_content">Lecture content</string>
    <string name="teaching_content">Teaching content</string>
    <string name="lec_method">Method</string>
    <string name="lec_method_details">Method details</string>
    <string name="lec_target">Targets</string>
    <string name="teaching_target">Teaching target</string>
    <string name="examination_aids">Examination aids</string>
    <string name="literature">Literature</string>
    <string name="tumonline_settings">TUMOnline settings</string>
    <string name="study_plans">Study Plans</string>
    <string name="menues">Cafeterias</string>
    <string name="mvv">MVV</string>
    <string name="rss_feeds">RSS-Feeds</string>
    <string name="events">Events</string>
    <string name="facebook">Facebook</string>
    <string name="information">Information</string>
    <string name="loading">Loading …</string>
    <string name="lrz_id_detail">Your LRZ Identification e.g. go42tum".</string>
    <string name="lrz_id">LRZ Identification"</string>
    <string name="services">Services</string>
    <string name="startup_wizzard_uppercase">STARTUP-WIZZARD</string>
    <string name="welcome_msg"><b>Welcome to TUM Campus App!</b>\n\nIn order to setup the TUMOnline access, you need to provide your <b>LRZ Identification</b>.\n\nThis Id has the following format:\n<i>xx00xxx</i>\n(2 letters, 2 digits, 3 letters)</string>
    <string name="button_next">Next</string>
    <string name="choose_color"><b>Choose you favorite color</b>\n\nYou can choose a color scheme for the TUM Campus App.</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="gray">Gray</string>
    <string name="step_1">Step 1</string>
    <string name="step_3">Step 3</string>
    <string name="demo_mode">In-App-Tutorial</string>
    <string name="demo_info">Activates help mode for instruction on how to use this App.</string>
</resources>