<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/tumonline_settings" >
        <EditTextPreference
            android:key="lrz_id"
            android:summary="@string/lrz_id_detail"
            android:title="@string/lrz_id" />

        <Preference
            android:key="button_token"
            android:summary="@string/generate_tumonline_token_detail"
            android:title="@string/generate_tumonline_token" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/personal_settings" >
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/roles"
            android:entryValues="@array/roles_values"
            android:key="role"
            android:summary="@string/role_summary"
            android:title="@string/role" />
        
        <PreferenceScreen
            android:summary="@string/mensa_summary"
            android:title="@string/mensa_title" >
            <PreferenceCategory 
                android:key="my_mensa"
                android:title="@string/my_mensa" >
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/extras" >
        <Preference
            android:key="button_wizzard"
            android:summary="@string/open_wizzard_detail"
            android:title="@string/open_wizzard" />
        <Preference
            android:key="button_clear_cache"
            android:summary="@string/clear_cache_detail"
            android:title="@string/clear_cache" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/services" >
        <CheckBoxPreference
            android:key="silent_mode"
            android:summary="@string/silence_phone_info"
            android:title="@string/silence_phone" />
        <CheckBoxPreference
            android:enabled="false"
            android:key="background_mode"
            android:summary="@string/background_info"
            android:title="@string/background_mode" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="first_run"
            android:summary="@string/demo_info"
            android:title="@string/demo_mode" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/debug_for_developer" >
        <Preference
            android:enabled="false"
            android:summary="@string/debug_mode"
            android:title="@string/debug_mode" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_tca" >
        <Preference
            android:key="about"
            android:title="@string/information">
            <intent android:action="de.tum.in.tumcampus.activities.InformationActivity"/>
        </Preference>
        <Preference
            android:key="facebook"
            android:title="@string/facebook">
        </Preference>
        <Preference
            android:key="github"
            android:title="@string/github">
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>