<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/pager_title_strip"
        style="@style/SectionHeadline"
        android:text="@string/startup_wizzard_uppercase" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_default" >

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_3"
                android:textColor="@color/text_light_gray" />

            <TextView
                android:id="@+id/tvSucc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:text="@string/choose_color" />

            <RadioGroup
                android:id="@+id/radiogroupColorScheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/blue" />

                <RadioButton
                    android:id="@+id/radioRed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/red" />

                <RadioButton
                    android:id="@+id/radioGreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/green" />

                <RadioButton
                    android:id="@+id/radioGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gray" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:text="@string/set_silent_mode" />

            <CheckBox
                android:id="@+id/chk_silent_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/silence_phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:text="@string/set_background_mode" />

            <CheckBox
                android:id="@+id/chk_background_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/background_mode" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/padding_default"
                android:orientation="horizontal" >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickSkip"
                    android:text="@string/button_skip" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickNext"
                    android:text="@string/button_next" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>