<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/progressBar1"
            android:layout_below="@+id/progressBar1"
            android:text="@string/loading"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_sorry"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvLDetailsName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:background="@color/sections"
                android:inputType="textMultiLine|textNoSuggestions"
                android:scrollHorizontally="false"
                android:text="@string/lec_details_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="4dip"
                android:scrollHorizontally="false"
                android:text="@string/lec_details"
                android:textColor="#0065BD"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvLDetailsSemester"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="4dip"
                android:scrollHorizontally="false"
                android:text="@string/semester_data"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvLDetailsSWS"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="4dip"
                android:scrollHorizontally="false"
                android:text="@string/sws_number"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="4dip"
                android:scrollHorizontally="false"
                android:text="@string/lecture_begin"
                android:textColor="#0065BD"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvLDetailsTermin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="4dip"
                android:scrollHorizontally="false"
                android:text="@string/first_date"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvLDHeadDetais"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="4dip"
                android:scrollHorizontally="false"
                android:text="@string/lec_contributors"
                android:textColor="#0065BD"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvLDetailsDozent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="4dip"
                android:scrollHorizontally="false"
                android:text="@string/lecturer"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvLDetailsOrg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="4dip"
                android:paddingTop="2dip"
                android:scrollHorizontally="false"
                android:text="@string/organisation_of_lecture"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="4dip"
                android:scrollHorizontally="false"
                android:text="@string/lec_content"
                android:textColor="#0065BD"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvLDetailInhalt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="4dip"
                android:scrollHorizontally="false"
                android:text="@string/teaching_content"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TextView02M"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="4dip"
                android:scrollHorizontally="false"
                android:text="@string/lec_method"
                android:textColor="#0065BD"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvLDetailsMethode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="4dip"
                android:scrollHorizontally="false"
                android:text="@string/lec_method_details"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="4dip"
                android:scrollHorizontally="false"
                android:text="@string/lec_target"
                android:textColor="#0065BD"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvLDetailsZiele"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="4dip"
                android:scrollHorizontally="false"
                android:text="@string/teaching_target"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="4dip"
                android:scrollHorizontally="false"
                android:text="@string/examination_aids"
                android:textColor="#0065BD"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvLDetailsLiteratur"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="4dip"
                android:scrollHorizontally="false"
                android:text="@string/literature"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnLDetailsTermine"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lec_dates" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>