<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_default" >

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_height="wrap_content"
        android:text="@string/step_1"
        android:textColor="@color/text_light_gray" />

    <TextView
        android:id="@+id/textViewWel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_default"
        android:text="@string/welcome_msg" />

    <EditText
        android:id="@+id/lrd_id"
        android:padding="@dimen/padding_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickNext"
        android:text="@string/button_next" />

</LinearLayout>